--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li class="list-inline-item"><a href="https://stackoverflow.com/users/8209968/soumik-rakshit" target="_blank"><i class="fab fa-stack-overflow"></i></a></li>
                     <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC968ESa0PKiJl9e3CyIRFZQ" target="_blank"><i class="fab fa-youtube"></i></a></li>
                     <li class="list-inline-item"><a href="https://sourcerer.io/soumik12345" target="_blank"><i class="fab fa-sourcetree"></i></a></li>
+                    <li class="list-inline-item"><a href="https://soumik12345.github.io/geekyrakshit-blog/" target="_blank"><i class="fab fa-blogger-b"></i></a></li>
                 </ul> 
             </div><!--//profile-->
             <a class="btn btn-cta-primary float-right" href="https://themes.3rdwavemedia.com/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
