--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                 <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub</h2>
+                        <p>
+                            <a href="https://sourcerer.io/soumik12345"><img src="https://img.shields.io/badge/Python-743%20commits-orange.svg" alt=""></a>
+                            <a href="https://sourcerer.io/soumik12345"><img src="https://img.shields.io/badge/JavaScript-109%20commits-orange.svg" alt=""></a>
+                            <a href="https://sourcerer.io/soumik12345"><img src="https://img.shields.io/badge/Java-102%20commits-orange.svg" alt=""></a>
+                        </p>
                         <div id="github-graph" class="github-graph">
 
                         </div><!--//github-graph-->
@@ -408,13 +413,13 @@ Soumik has been able to successfully develop recommendation engine prototype and
         </div><!--//row-->
     </div><!--//masonry-->
     
-<!--    &lt;!&ndash; ******FOOTER****** &ndash;&gt; -->
-<!--    <footer class="footer">-->
-<!--        <div class="container text-center">-->
-<!--                &lt;!&ndash;/* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */&ndash;&gt;-->
-<!--                <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>-->
-<!--        </div>&lt;!&ndash;//container&ndash;&gt;-->
-<!--    </footer>&lt;!&ndash;//footer &ndash;&gt;-->
+    <!-- ******FOOTER****** -->
+    <footer class="footer">
+        <div class="container text-center">
+                <!--/* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
+                <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+        </div><!--//container-->
+    </footer><!--//footer -->
  
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-3.4.1.min.js"></script>
