--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="list-inline-item"><a href="https://soumik12345.github.io/geekyrakshit-blog/" target="_blank"><i class="fab fa-blogger-b"></i></a></li>
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="https://themes.3rdwavemedia.com/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary float-right" href="assets/docs/Resume_Soumik_Rakshit.pdf" target="_blank"><i class="fas fa-download"></i> Download Resume</a>
         </div><!--//container-->
     </header><!--//header-->
     
