--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 <img class="img-fluid project-image" src="https://github.com/soumik12345/Image-Depth-Prediction/raw/master/assets/val_res_2.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/soumik12345/Image-Depth-Prediction" target="_blank">Adventures with GANs</a></h3>
+                                    <h3 class="title"><a href="https://github.com/soumik12345/Image-Depth-Prediction" target="_blank">Image Depth Prediction using GANs</a></h3>
                                     <p class="mb-2">Tensorflow 2.2.0 implementation of single image stereo depthmap prediction using GANs.</p>
                                     <p><a class="more-link" href="https://github.com/soumik12345/Image-Depth-Prediction" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
@@ -191,7 +191,7 @@
                                 <img class="img-fluid project-image" src="https://github.com/soumik12345/Automatic-Number-Plate-Recognition/raw/master/korean_license_plate.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/soumik12345/Automatic-Number-Plate-Recognition" target="_blank">Adventures with GANs</a></h3>
+                                    <h3 class="title"><a href="https://github.com/soumik12345/Automatic-Number-Plate-Recognition" target="_blank">Automatic Number Plate Recognition</a></h3>
                                     <p class="mb-2">Automatic Car License/Number Plate recognition System developed as an ideation level project at DeepWrex Technologies.</p>
                                     <p><a class="more-link" href="https://github.com/soumik12345/Automatic-Number-Plate-Recognition" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
@@ -202,7 +202,7 @@
                                 <img class="img-fluid project-image" src="https://github.com/soumik12345/Nearest-Celebrity-Face/raw/master/Results/Figure_1-1.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/soumik12345/Nearest-Celebrity-Face" target="_blank">Adventures with GANs</a></h3>
+                                    <h3 class="title"><a href="https://github.com/soumik12345/Nearest-Celebrity-Face" target="_blank">Nearest Celebrity Face</a></h3>
                                     <p class="mb-2">Implementation of FaceNet: A Unified Embedding for Face Recognition and Clustering to find the celebrity whose face matches the closest to yours.</p>
                                     <p><a class="more-link" href="https://github.com/soumik12345/Nearest-Celebrity-Face" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
