--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
                         <h2 class="heading">Projects</h2>
                         <div class="content">
 
-
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">Twin Delayed DDPG</a></h3><br>
+                                <h3 class="title"><a href="https://github.com/lattice-ai/DeepLabV3-Plus" target="_blank">DeepLabV3+</a></h3><br>
 <!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
                                 <div class="featured-image has-ribbon">
                                     <a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">
-                                    <img class="img-fluid project-image" src="https://github.com/soumik12345/Twin-Delayed-DDPG/raw/master/Results/BipedalWalker-v3.gif" alt="project name" />
+                                    <img class="img-fluid project-image" src="./assets/images/projects/deeplabv3_plus.gif" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
@@ -84,7 +83,25 @@
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>Pytorch Implementation of Twin Delayed Deep Deterministic Policy Gradients Algorithm for Continuous Control as described by the paper Addressing Function Approximation Error in Actor-Critic Methods by Scott Fujimoto, Herke van Hoof, David Meger.</p><br>
+                                    <p align="center">Tensorflow 2.2.0 implementation of DeepLabV3-Plus architecture as proposed by the paper Encoder-Decoder with Atrous Separable Convolution for Semantic Image Segmentation.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/lattice-ai/DeepLabV3-Plus" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
+
+
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">Twin Delayed DDPG</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                    <a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">
+                                    <img class="img-fluid project-image" src="https://github.com/soumik12345/Twin-Delayed-DDPG/raw/master/Results/BipedalWalker-v3.gif" alt="project name" />
+                                    </a>
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">Pytorch Implementation of Twin Delayed Deep Deterministic Policy Gradients Algorithm for Continuous Control as described by the paper Addressing Function Approximation Error in Actor-Critic Methods by Scott Fujimoto, Herke van Hoof, David Meger.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
 <!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
 <!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
 <!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
@@ -94,17 +111,14 @@
                             <div class="item featured text-center">
                                 <h3 class="title"><a href="https://github.com/soumik12345/DDPG" target="_blank">Deep Deterministic Policy Gradients</a></h3><br>
 <!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
-                                <div class="featured-image has-ribbon">
                                     <a href="https://github.com/soumik12345/DDPG" target="_blank">
                                     <img class="img-fluid project-image" src="https://github.com/soumik12345/DDPG/raw/master/Results/LunarLanderContinuous-V2.gif" alt="project name" />
                                     </a>
-                                    <div class="ribbon">
-                                        <div class="text">New</div>
-                                    </div>
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>Pytorch implementation of the Deep Deterministic Policy Gradients Algorithm for Continuous Control as described by the paper Continuous control with deep reinforcement learning by Timothy P. Lillicrap, Jonathan J. Hunt, Alexander Pritzel, Nicolas Heess, Tom Erez, Yuval Tassa, David Silver, Daan Wierstra.</p><br>
+                                    <p align="center">Pytorch implementation of the Deep Deterministic Policy Gradients Algorithm for Continuous Control as described by the paper Continuous control with deep reinforcement learning by Timothy P. Lillicrap, Jonathan J. Hunt, Alexander Pritzel, Nicolas Heess, Tom Erez, Yuval Tassa, David Silver, Daan Wierstra.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/DDPG" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
 <!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
 <!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
 <!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
@@ -123,7 +137,8 @@
                                 </div>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>A computer vision based gesture detection system that automatically detects the number of fingers as a hand gesture and enables you to control simple button pressing games using you hand gestures. Currently the system has been tested on the T-Rex Runner game.</p><br>
+                                    <p align="center">A computer vision based gesture detection system that automatically detects the number of fingers as a hand gesture and enables you to control simple button pressing games using you hand gestures. Currently the system has been tested on the T-Rex Runner game.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/Kinect-Vision" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
 <!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
 <!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
 <!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
@@ -136,13 +151,11 @@
                                     <a href="https://github.com/soumik12345/Swayam-Self-Driving-Car" target="_blank">
                                     <img class="img-fluid project-image" src="https://github.com/soumik12345/Swayam-Self-Driving-Car/raw/master/P2_Advanced_Lane_Finder/Results/real_world_footage.gif" alt="project name" />
                                     </a>
-<!--                                    <div class="ribbon">-->
-<!--                                        <div class="text">New</div>-->
-<!--                                    </div>-->
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>This is an implementation of various algorithms and techniques required to build a simple Self Driving Car. A modified versions of the Udacity Self Driving Car Simulator is used as a testing environment.</p><br>
+                                    <p align="center">This is an implementation of various algorithms and techniques required to build a simple Self Driving Car. A modified versions of the Udacity Self Driving Car Simulator is used as a testing environment.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/Swayam-Self-Driving-Car" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
 <!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
 <!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
 <!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
@@ -160,8 +173,21 @@
 <!--                                        <div class="text">New</div>-->
 <!--                                    </div>-->
                                 </div><div class="desc text-left">
-                                    <p>Tensorflow 2.0 Implementation of the paper Image-to-Image Translation using Conditional GANs by Philip Isola, Jun-Yan Zhu, Tinghui Zhou and Alexei A. Efros.</p><br><hr class="divider" />
+                                    <p align="center">Tensorflow 2.0 Implementation of the paper Image-to-Image Translation using Conditional GANs by Philip Isola, Jun-Yan Zhu, Tinghui Zhou and Alexei A. Efros.</p><br>
+                                        <p align="center"><a class="more-link" href="https://github.com/soumik12345/Pix2Pix" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                        <hr class="divider" />
 
+
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="https://github.com/soumik12345/Vision-Transformer" target="_blank">
+                                <img class="img-fluid project-image" src="https://raw.githubusercontent.com/soumik12345/Vision-Transformer/master/assets/model.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a href="https://github.com/soumik12345/Vision-Transformer" target="_blank">Vision Transformer</a></h3>
+                                    <p class="mb-2">Unofficial Tensorflow 2.x implementation of the Transformer based Image Classification model proposed by the paper AN IMAGE IS WORTH 16X16 WORDS: TRANSFORMERS FOR IMAGE RECOGNITION AT SCALE. The paper is currently under double-blind review.</p>
+                                    <p><a class="more-link" href="https://github.com/soumik12345/Vision-Transformer" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
 
 
                             <div class="item row">
