--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Software Development Engineer and Deep Learning Researcher. Working in the domain on Customer Resource Management and Natural Language Processing as part of IBM. My research interest include Object Detection, Image Restoration, Sequence-to-Sequence tasks, Reinforcement Learning, Cryptography, Quantum Computation and Gesture Control.</p>
+                            <p>Software Development Engineer and Deep Learning Researcher. Working in the domain on Customer Resource Management and Natural Language Processing as part of IBM. My research interest include Object Detection, Image Restoration, Sequence-to-Sequence tasks, Reinforcement Learning, Gesture Control and High-Dynamic-Range Imaging.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -71,15 +71,32 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://github.com/lattice-ai/DeepLabV3-Plus" target="_blank">DeepLabV3+</a></h3><br>
+                                <h3 class="title"><a href="https://github.com/soumik12345/Zero-DCE" target="_blank">Zero-DCE</a></h3><br>
 <!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
                                 <div class="featured-image has-ribbon">
                                     <a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">
-                                    <img class="img-fluid project-image" src="./assets/images/projects/deeplabv3_plus.gif" alt="project name" />
+                                    <img class="img-fluid project-image" src="./assets/images/projects/zero-dce.gif" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
                                     </div>
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">Pytorch implementation of Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement (https://arxiv.org/abs/2001.06826).</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/Zero-DCE" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
+
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/lattice-ai/DeepLabV3-Plus" target="_blank">DeepLabV3+</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://github.com/soumik12345/lattice-ai/DeepLabV3-Plus" target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/deeplabv3_plus.gif" alt="project name" />
+                                    </a>
                                 </div>
 
                                 <div class="desc text-left">
@@ -90,6 +107,22 @@
 <!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
                             <hr class="divider" />
 
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/soumik12345/GradCam" target="_blank">DeepLabV3+</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://github.com/soumik12345/GradCam" target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/cat_vgg19.gif" alt="project name" />
+                                    </a>
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">Tensorflow 2.2.0 Implementation of Gradient Class Activation Maps or GradCam as proposed by the paper Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/GradCam" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
 
                             <div class="item featured text-center">
                                 <h3 class="title"><a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">Twin Delayed DDPG</a></h3><br>
