Updated Project and Skills Section

--- a/index.html
+++ b/index.html
@@ -71,15 +71,55 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://github.com/soumik12345/Zero-DCE" target="_blank">Zero-DCE</a></h3><br>
+                                <h3 class="title"><a href="https://github.com/soumik12345/Radium" target="_blank">Radium</a></h3><br>
 <!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
                                 <div class="featured-image has-ribbon">
-                                    <a href="https://github.com/soumik12345/Twin-Delayed-DDPG" target="_blank">
-                                    <img class="img-fluid project-image" src="./assets/images/projects/zero-dce.gif" alt="project name" />
+                                    <a href="https://github.com/soumik12345/Radium" target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/radium.gif" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
                                     </div>
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">Radium is a small and lightweight Ray Tracing Engine written in C++ that runs on the CPU using shared-memory multiprocessing featuring a multitude of features and an easy-to-use API.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/Radium" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
+
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/soumik12345/MIRNet" target="_blank">MIRNet</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://github.com/soumik12345/MIRNet" target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/mirnet.gif" alt="project name" />
+                                    </a>
+                                    <!-- <div class="ribbon">
+                                        <div class="text">New</div>
+                                    </div> -->
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">Tensorflow implementation of the MIRNet architecture as proposed by <a href="https://arxiv.org/pdf/2003.06792v2.pdf">Learning Enriched Features for Real Image Restoration and Enhancement</a>.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/MIRNet" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
+
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/soumik12345/Zero-DCE" target="_blank">Zero-DCE</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://github.com/soumik12345/Zero-DCE" target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/zero-dce.gif" alt="project name" />
+                                    </a>
+                                    <!-- <div class="ribbon">
+                                        <div class="text">New</div>
+                                    </div> -->
                                 </div>
 
                                 <div class="desc text-left">
@@ -108,7 +148,7 @@
                             <hr class="divider" />
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://github.com/soumik12345/GradCam" target="_blank">DeepLabV3+</a></h3><br>
+                                <h3 class="title"><a href="https://github.com/soumik12345/GradCam" target="_blank">Grad-CAM</a></h3><br>
 <!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
                                 <div class="featured-image has-ribbon">
                                     <a href="https://github.com/soumik12345/GradCam" target="_blank">
@@ -399,11 +439,11 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Reinforcement Learning</h3>
+                                    <h3 class="level-title">Computer Graphics</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">DevOps</h3>
+                                    <h3 class="level-title">GPGPU Programming</h3>
                                 </div><!--//item-->
                                 
 <!--                                <div class="item">-->
