--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
                <section class="latest section">
                     <div class="section-inner">
                         <h2 class="heading">Projects</h2>
+                        
+                        <div class="content">
+
+                            <div class="item featured text-center">
+                                <h3 class="title"><a href="https://github.com/soumik12345/point-cloud-segmentation" target="_blank">Point-cloud Segmentation using PointNet</a></h3><br>
+<!--                                <p class="summary">The perfect Bootstrap 4 admin template for app developers</p>-->
+                                <div class="featured-image has-ribbon">
+                                    <a href="https://github.com/soumik12345/point-cloud-segmentation" target="_blank">
+                                    <img class="img-fluid project-image" src="https://raw.githubusercontent.com/soumik12345/point-cloud-segmentation/main/assets/Airplane/airplane.gif" alt="project name" />
+                                    </a>
+                                    <!-- <div class="ribbon">
+                                        <div class="text">New</div>
+                                    </div> -->
+                                </div>
+
+                                <div class="desc text-left">
+                                    <p align="center">This repository provides a TF2 implementation of PointNet1 for segmenting point clouds. Our implementation is fully supported on TPUs allowing you to train models faster. Distributed training (single-device multi-worker) on GPUs is also supported and so is single-GPU training.</p><br>
+                                    <p align="center"><a class="more-link" href="https://github.com/soumik12345/point-cloud-segmentation" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+<!--                                </div>&lt;!&ndash;//desc&ndash;&gt;         -->
+<!--                                <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a>                 -->
+<!--                            </div>&lt;!&ndash;//item&ndash;&gt;-->
+                            <hr class="divider" />
+
                         <div class="content">
 
                             <div class="item featured text-center">
@@ -77,9 +100,9 @@
                                     <a href="https://github.com/soumik12345/Radium" target="_blank">
                                     <img class="img-fluid project-image" src="./assets/images/projects/radium.gif" alt="project name" />
                                     </a>
-                                    <div class="ribbon">
+                                    <!-- <div class="ribbon">
                                         <div class="text">New</div>
-                                    </div>
+                                    </div> -->
                                 </div>
 
                                 <div class="desc text-left">
