--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
+                                <h3 class="title">Machine Learning Engineer - <span class="place"><a href="#">Ignitarium</a></span> <span class="year">(2020 - Present)</span></h3>
+                                <p>Working on SOTA Deep Learning techniques for TYQ-i, Ignitarium’s Visual defect detection platform.</p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title">Software Development Engineer - <span class="place"><a href="#">IBM</a></span> <span class="year">(2020 - Present)</span></h3>
                                 <p>Responsible for development and deployment of Customer Resource Management Applications and NLP Research</p>
                             </div><!--//item-->
@@ -489,10 +493,9 @@
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">                                  
-                                    <p><i class="fas fa-quote-left"></i>Soumik worked with us as an intern. We worked with him remotely and we are extremely pleased to see the impact and outcome from him, given he was assigned the task of developing a recommendation engine. Soumik is very hardworking and committed person. His knowledge really amazed me. He is investing seriously in Machine Learning space which is ever expanding and evolving.
-Soumik has been able to successfully develop recommendation engine prototype and it is extremely impressive. He is smart and quick in addressing changes. With this kind of dedication and knowledge he will definitely evolve to be a great ML/AI professional. I think he will go many miles. I wish all the very best to this bright, upright and intelligent person in all his future dreams and aspirations.</p>
+                                    <p><i class="fas fa-quote-left"></i>I feel quite fortunate to have worked with an individual like Soumik. His knowledge in various sub-fields (computer vision, natural language processing, 3D modeling, etc.) of deep learning is one-of-a-kind. Not only he can accurately reproduce papers but also sometimes improve the results further. On top of that, he always enforces good software engineering practices. I find this a rare skill. His GitHub profile should speak volumes about the depth of his works and their variety: <a href="https://github.com/soumik12345">https://github.com/soumik12345</a>.<br>He is also very keen on receiving feedback on his works and works hard toward addressing them. His go-getter kind of attitude toward work is fused with indomitable passion and humility. This makes him a great team player too.<br>Beyond being a collaborator, I am a fan of his works especially in the area of generative deep learning. The following is my favorite: https://github.com/soumik12345/MIRNet. I am absolutely certain about his abilities (be it technical, be it cultural) and I think that any team would be lucky to have him.</p>
                                 </blockquote>                
-                                <p class="source"><span class="name">Kaushik Banerjee</span><br /><span class="title">Entrepreneur | VC Advisory Role | Ex Silicon Valley | Ex Wall Street | 10X Transformation Evangelist</span></p>
+                                <p class="source"><span class="name">Sayak Paul</span><br /><span class="title">ML Engineer at Carted</span></p>
                             </div><!--//item-->
                             
                             <p><a class="more-link" href="https://www.linkedin.com/in/soumikrakshit/"><i class="fas fa-external-link-alt"></i>More on Linkedin</a></p>
