--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Bengaluru, India.</li>
-                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto:19soumik.rakshit96@gmail.com">19soumik.rakshit96@gmail.com</a></li>
-                                <li><i class="fas fa-phone"></i><span class="sr-only">Phone:</span><a href="tel:+919748-989-782">+91 9748989782</a></li>
+                                <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Kolkata, India.</li>
+                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto:soumik.rakshit@wandb.com">soumik.rakshit@wandb.com</a></li>
+                                <!-- <li><i class="fas fa-phone"></i><span class="sr-only">Phone:</span><a href="tel:+919748-989-782">+91 9748989782</a></li> -->
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
@@ -453,6 +453,10 @@
 
                                 <div class="item">
                                     <h3 class="level-title">Pytorch</h3>
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Jax</h3>
                                 </div><!--//item-->
 
                                 <div class="item">
